--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json --port "
+    "start": "node server.js"
   },
   "engines": {
     "node": "12.18.3"
