--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "json-server": "^0.16.1",
+    "json-server-reset": "^1.3.0",
     "node-fetch": "^2.6.1"
   }
 }
